[package]
name = "rdkafka"
version = "0.12.0"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
repository = "https://github.com/fede1024/rust-rdkafka"
readme = "README.md"
license = "MIT"
description = "Rust wrapper for librdkafka"
keywords = ["kafka", "rdkafka"]
categories = ["api-bindings"]

[dependencies]
rdkafka-sys = { path = "rdkafka-sys", version = "0.11.0-0" }
env_logger = "0.4"
futures = "0.1"
libc = "0.2"
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
clap = "^2.18.0"
tokio-core = "^0.1.4"
futures-cpupool = "^0.1.2"
rand = "^0.3.15"
chrono = "^0.4.0"

[features]
default = []

ssl = ["rdkafka-sys/ssl"]
sasl = ["rdkafka-sys/sasl", "ssl"]
